--- a/generators/react-native/templates/app/modules/home/home-screen.js.ejs
+++ b/generators/react-native/templates/app/modules/home/home-screen.js.ejs
@@ -14,7 +14,7 @@ function HomeScreen(props) {
       <ScrollView contentInsetAdjustmentBehavior="automatic" style={styles.scrollView}>
         <View style={styles.centered}>
           <Image source={Images.logoJhipster} style={styles.logo} />
-          <Text style={styles.welcomeText}><%= context.reactNativeAppName %></Text>
+          <Text style={styles.welcomeText}><%= baseName %></Text>
           <Text style={styles.welcomeText}>Welcome to your JHipster React Native app.</Text>
         </View>
         {account && account.login ? (
