--- a/generators/react-native/templates/app/shared/sagas/startup.saga.js.ejs
+++ b/generators/react-native/templates/app/shared/sagas/startup.saga.js.ejs
@@ -2,7 +2,7 @@ import { put } from 'redux-saga/effects'
 import AppStateActions from '../reducers/app-state.reducer'
 import LoginActions from '../../modules/login/login.reducer'
 import AccountActions from '../reducers/account.reducer'
-<%_ if (context.authenticationType === 'oauth2') { _%>
+<%_ if (authenticationType === 'oauth2') { _%>
 import AuthInfoActions from '../reducers/auth-info.reducer';
 <%_ } _%>
 
@@ -11,7 +11,7 @@ export function * startup (action) {
   yield put(LoginActions.loginLoad())
   yield put(AccountActions.accountRequest())
   yield put(AppStateActions.setRehydrationComplete())
-<%_ if (context.authenticationType === 'oauth2') { _%>
+<%_ if (authenticationType === 'oauth2') { _%>
   yield put(AuthInfoActions.authInfoRequest());
 <%_ } _%>
 }
