--- a/generators/react-native/templates/app/config/redux-persist.js.ejs
+++ b/generators/react-native/templates/app/config/redux-persist.js.ejs
@@ -8,7 +8,7 @@ const REDUX_PERSIST = {
   storeConfig: {
     key: 'primary',
     storage: AsyncStorage,
-    blacklist: ['appState'<%_ if (context.authenticationType === 'oauth2') { _%>, 'authInfo'<%_ } _%>], // reducer keys that you do NOT want stored to persistence here
+    blacklist: ['appState'<%_ if (authenticationType === 'oauth2') { _%>, 'authInfo'<%_ } _%>], // reducer keys that you do NOT want stored to persistence here
     // whitelist: [], Optionally, just specify the keys you DO want stored to
     // persistence. An empty array means 'don't store any reducers' -> infinitered/ignite#409
     transforms: [immutablePersistenceTransform]
