--- a/generators/react-native/templates/app/modules/home/learn-more-links.component.js.ejs
+++ b/generators/react-native/templates/app/modules/home/learn-more-links.component.js.ejs
@@ -13,7 +13,7 @@ import React from 'react'
 import { Colors } from '../../shared/themes'
 
 const links = [
-  <%_ if (context.authenticationType === 'oauth2') { _%>
+  <%_ if (authenticationType === 'oauth2') { _%>
   {
     id: 0,
     title: 'OAuth2 Login Config',
@@ -63,7 +63,7 @@ const links = [
     link: 'https://github.com/jhipster/generator-jhipster-react-native/blob/main/docs/storybook.md',
     description: 'How to use Storybook with React Native.',
   },
-  <%_ if (context.websocket) { _%>
+  <%_ if (websocket) { _%>
   {
     id: 8,
     title: 'Websockets Demo',
