--- a/generators/react-native/templates/app/shared/sagas/call-api.saga.js.ejs
+++ b/generators/react-native/templates/app/shared/sagas/call-api.saga.js.ejs
@@ -1,6 +1,6 @@
 import { put, take } from 'redux-saga/effects'
 
-<%_ if (context.authenticationType === 'oauth2') { _%>
+<%_ if (authenticationType === 'oauth2') { _%>
 import LoginActions from '../../modules/login/login.reducer'
 <%_ } else { _%>
 import { navigate } from '../../navigation/nav-ref';
@@ -17,7 +17,7 @@ export function * callApi (apiCall) {
   // this triggers your UI to show a login form
   yield put({ type: 'RELOGIN' })
 
-  <%_ if (context.authenticationType === 'oauth2') { _%>
+  <%_ if (authenticationType === 'oauth2') { _%>
   LoginActions.loginRequest()
   <%_ } else { _%>
   navigate('LoginScreen')
