--- a/generators/react-native/templates/app/shared/services/api.js.ejs
+++ b/generators/react-native/templates/app/shared/services/api.js.ejs
@@ -38,11 +38,11 @@ const create = (baseURL = AppConfig.apiUrl) => {
   //
   const setAuthToken = (userAuth) => api.setHeader('Authorization', 'Bearer ' + userAuth)
   const removeAuthToken = () => api.deleteHeader('Authorization')
-  <%_ if (context.authenticationType === 'oauth2') { _%>
+  <%_ if (authenticationType === 'oauth2') { _%>
   // use an empty Authorization header in the auth-info request to prevent an invalid token from returning 401
   const getOauthInfo = () => api.get('api/auth-info', {}, { headers: { Authorization: undefined } });
   const getOauthIssuerInfo = (issuerUrl) => api.get(`${issuerUrl}/.well-known/openid-configuration`)
-  <%_ } else if (context.authenticationType === 'jwt') { _%>
+  <%_ } else if (authenticationType === 'jwt') { _%>
   const login = (userAuth) => api.post('api/authenticate', userAuth)
   <%_ } _%>
   const register = (user) => api.post('api/register', user)
@@ -81,10 +81,10 @@ const create = (baseURL = AppConfig.apiUrl) => {
     // jhipster-react-native-api-export-needle
     setAuthToken,
     removeAuthToken,
-    <%_ if (context.authenticationType === 'oauth2') { _%>
+    <%_ if (authenticationType === 'oauth2') { _%>
     getOauthInfo,
     getOauthIssuerInfo,
-    <%_ } else if (context.authenticationType === 'jwt') { _%>
+    <%_ } else if (authenticationType === 'jwt') { _%>
     login,
     <%_ } _%>
     register,
